menambahkan no wa

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="contact" class="py-20 px-8 bg-gray-950 text-center">
       <h2 class="text-3xl font-bold mb-6">Hubungi Saya</h2>
       <p class="mb-6">Tertarik bekerja sama? Hubungi saya melalui WhatsApp atau email di bawah ini:</p>
-      <a href="https://wa.me/628123456789" target="_blank" class="bg-orange-500 px-6 py-3 rounded-lg font-semibold">WhatsApp</a>
+      <a href="https://wa.me/+6285654985244" target="_blank" class="bg-orange-500 px-6 py-3 rounded-lg font-semibold">WhatsApp</a>
     </section>
 
     <!-- Footer -->
