--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 
     <!-- About Section -->
     <section id="about" class="py-20 px-8 flex flex-col md:flex-row items-center gap-12">
+      <h2 class="text-3xl font-bold mb-6" style="text-align: center;">Tentang Saya</h2>
       <img src="image/Dr.EP Studio.jpg" alt="M. Sulaiman Kurdi" width="400" height="300">
-        <h2 class="text-3xl font-bold mb-6">Tentang Saya</h2>
+
         <ul class="space-y-4">
           <li>🎓 Pendidikan Olahraga</li>
           <li>📜 Sertifikat Personal Trainer</li>
