--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url(image/DIDI\ DAN\ DONI.jpg);">
+    <section id="home" class="h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url(image/POSTER.jpg);">
       <h1 class="text-4xl md:text-6xl font-bold mb-6">Bangun Tubuh Ideal & Hidup Sehat Bersama<br /><span class="text-orange-500">Personal Trainer Profesional</span></h1>
       <p class="text-lg md:text-xl mb-6">Program latihan personal sesuai tujuanmu</p>
       <a href="#program" class="bg-orange-500 px-6 py-3 rounded-lg font-semibold">Mulai Sekarang</a>
@@ -51,7 +51,9 @@
 
     <!-- About Section -->
     <section id="about" class="py-20 px-8 flex flex-col md:flex-row items-center gap-12">
-      <h2 class="text-3xl font-bold mb-6" style="text-align: center;">Tentang saya</h2>
+      <h2 class="text-3xl font-bold mb-6" style="text-align: center;" mb="">Tentang saya</h2>
+
+
       <img src="image/COACH DIDI.jpg" alt="M. Sulaiman Kurdi" width="400" height="300">
 
         <ul class="space-y-4">
