memperbaiki bug tulisan hero

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="relative h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url(image/POSTER.jpg)">
+    <section id="home" class="relative scroll-mt-24 h-screen flex flex-col justify-center items-center text-center bg-cover bg-center" style="background-image: url(image/POSTER.jpg)">
       <!-- Overlay Blur & Gelap -->
       <div id="heroOverlay" class="absolute inset-0 bg-black/50 backdrop-blur-sm transition-all duration-300"></div>
 
       <!-- Konten -->
-      <div class="relative z-10 px-4">
+      <div class="relative z-0 px-4">
         <h1 class="text-4xl md:text-6xl font-bold mb-6 text-white">
           Bangun Tubuh Ideal & Hidup Sehat Bersama<br />
           <span class="text-orange-500">Personal Trainer Profesional</span>
