menambahkan botton email

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
       <h2 class="text-3xl font-bold mb-6">Hubungi Saya</h2>
       <p class="mb-6">Tertarik bekerja sama? Hubungi saya melalui WhatsApp atau email di bawah ini:</p>
       <a href="https://wa.me/+6285654985244" target="_blank" class="bg-orange-500 px-6 py-3 rounded-lg font-semibold">WhatsApp</a>
+      <!-- Tombol Email -->
+      <a href="mailto:sulaiman.m.kurdi@gmail.com" class="bg-orange-500 hover:bg-orange-600 text-white px-6 py-3 rounded-lg shadow-md transition"> 📧 Email Me </a>
     </section>
 
     <!-- Footer -->
