ngisi foto blog

--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
       <h2 class="text-3xl font-bold text-center mb-12">Blog / Tips Kesehatan</h2>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
-          <img src="https://via.placeholder.com/400x200" class="rounded-lg mb-4" />
+          <img src="image/Presentasi dihotel.jpg" class="rounded-lg mb-4" />
           <h3 class="text-xl font-semibold mb-2">5 Tips Diet Sehat</h3>
           <p class="text-sm text-gray-400">Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
         </div>
         <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
-          <img src="https://via.placeholder.com/400x200" class="rounded-lg mb-4" />
+          <img src="image/DIDI 1.jpg" class="rounded-lg mb-4" />
           <h3 class="text-xl font-semibold mb-2">Latihan Otot Dasar di Rumah</h3>
           <p class="text-sm text-gray-400">Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
         </div>
         <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
-          <img src="https://via.placeholder.com/400x200" class="rounded-lg mb-4" />
+          <img src="image/kece.jpg" class="rounded-lg mb-4" />
           <h3 class="text-xl font-semibold mb-2">Rahasia Konsistensi Olahraga</h3>
           <p class="text-sm text-gray-400">Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
         </div>
