--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Tambahkan AOS CSS di <head> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body class="bg-black text-white font-sans">
     <!-- Navbar -->
@@ -121,24 +122,23 @@
     </section>
 
     <!-- Blog Section -->
-    <section id="blog" class="py-20 px-8">
-      <h2 class="text-3xl font-bold text-center mb-12">Blog / Tips Kesehatan</h2>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
-          <img src="image/Presentasi dihotel.jpg" class="rounded-lg mb-4" />
-          <h3 class="text-xl font-semibold mb-2">5 Tips Diet Sehat</h3>
-          <p class="text-sm text-gray-400">Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
-        </div>
-        <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
-          <img src="image/DIDI 1.jpg" class="rounded-lg mb-4" />
-          <h3 class="text-xl font-semibold mb-2">Latihan Otot Dasar di Rumah</h3>
-          <p class="text-sm text-gray-400">Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
-        </div>
-        <div class="bg-gray-900 p-6 rounded-xl shadow-lg">
-          <img src="image/kece.jpg" class="rounded-lg mb-4" />
-          <h3 class="text-xl font-semibold mb-2">Rahasia Konsistensi Olahraga</h3>
-          <p class="text-sm text-gray-400">Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
-        </div>
+    <section id="blog">
+      <div class="blog-card">
+        <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
+        <h3>5 Tips Diet Sehat</h3>
+        <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
+      </div>
+
+      <div class="blog-card">
+        <img src="image/DIDI 1.jpg" alt="Artikel 2" />
+        <h3>Latihan Otot Dasar di Rumah</h3>
+        <p>atihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
+      </div>
+
+      <div class="blog-card">
+        <img src="image/kece.jpg" alt="Artikel 3" />
+        <h3>Rahasia Konsistensi Olahraga</h3>
+        <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
       </div>
     </section>
 
