mebenahi section blog

--- a/index.html
+++ b/index.html
@@ -123,25 +123,28 @@
 
     <!-- Blog Section -->
     <section id="blog">
-      <div class="blog-card">
-        <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
-        <h3>5 Tips Diet Sehat</h3>
-        <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
-      </div>
+      <h2 data-aos="fade-up">Blog / Tips Kesehatan</h2>
 
-      <div class="blog-card">
-        <img src="image/DIDI 1.jpg" alt="Artikel 2" />
-        <h3>Latihan Otot Dasar di Rumah</h3>
-        <p>atihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
-      </div>
+      <div class="blog-list">
+        <div class="blog-card">
+          <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
+          <h3>5 Tips Diet Sehat</h3>
+          <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
+        </div>
 
-      <div class="blog-card">
-        <img src="image/kece.jpg" alt="Artikel 3" />
-        <h3>Rahasia Konsistensi Olahraga</h3>
-        <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
+        <div class="blog-card">
+          <img src="image/DIDI 1.jpg" alt="Artikel 2" />
+          <h3>Latihan Otot Dasar di Rumah</h3>
+          <p>Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
+        </div>
+
+        <div class="blog-card">
+          <img src="image/kece.jpg" alt="Artikel 3" />
+          <h3>Rahasia Konsistensi Olahraga</h3>
+          <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
+        </div>
       </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="py-20 px-8 bg-gray-950 text-center">
       <h2 class="text-3xl font-bold mb-6">Hubungi Saya</h2>
