--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
       <h2 data-aos="fade-up">Blog / Tips Kesehatan</h2>
 
       <div class="blog-list">
-        <div class="blog-card">
+        <div class="blog-card" a href="artikel-1.html">
           <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
           <h3>5 Tips Diet Sehat</h3>
           <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
         </div>
 
-        <div class="blog-card">
+        <div class="blog-card" a href="artikel-2.html">
           <img src="image/DIDI 1.jpg" alt="Artikel 2" />
           <h3>Latihan Otot Dasar di Rumah</h3>
           <p>Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
         </div>
 
-        <div class="blog-card">
+        <div class="blog-card" a href="artikel-3.html">
           <img src="image/kece.jpg" alt="Artikel 3" />
           <h3>Rahasia Konsistensi Olahraga</h3>
           <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
