--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <h2 data-aos="fade-up">Blog / Tips Kesehatan</h2>
 
       <div class="blog-list">
-        <div class="blog-card" a href="artikel-1.html">
+        <div class="blog-card" a href="index-artikel1.html">
           <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
           <h3>5 Tips Diet Sehat</h3>
           <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
