barusadar kalo a href itu elemen tersendiri

--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
       <div class="blog-list">
         <div class="blog-card">
           <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
-          <h3 a href="artikel-1.html">5 Tips Diet Sehat</h3>
+          <h3><a href="artikel-1.html">5 Tips Diet Sehat</a></h3>
           <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
         </div>
 
         <div class="blog-card">
           <img src="image/DIDI 1.jpg" alt="Artikel 2" />
-          <h3 a href="artikel-2.html">Latihan Otot Dasar di Rumah</h3>
+          <h3><a href="artikel-2.html">Latihan Otot Dasar di Rumah</a></h3>
           <p>Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
         </div>
 
         <div class="blog-card">
           <img src="image/kece.jpg" alt="Artikel 3" />
-          <h3 a href="artikel-3.html">Rahasia Konsistensi Olahraga</h3>
+          <h3><a href="artikel-3.html">Rahasia Konsistensi Olahraga</a></h3>
           <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
         </div>
       </div>
