--- a/index.html
+++ b/index.html
@@ -127,21 +127,27 @@
 
       <div class="blog-list">
         <div class="blog-card">
-          <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
-          <h3><a href="artikel-1.html">5 Tips Diet Sehat</a></h3>
-          <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
+          <a href="artikel-1.html">
+            <img src="image/Presentasi dihotel.jpg" alt="Artikel 1" />
+            <h3>5 Tips Diet Sehat</h3>
+            <p>Bagaimana cara menurunkan berat badan tanpa menyiksa diri...</p>
+          </a>
         </div>
 
         <div class="blog-card">
-          <img src="image/DIDI 1.jpg" alt="Artikel 2" />
-          <h3><a href="artikel-2.html">Latihan Otot Dasar di Rumah</a></h3>
-          <p>Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
+          <a href="artikel-2.html">
+            <img src="image/DIDI 1.jpg" alt="Artikel 2" />
+            <h3>Latihan Otot Dasar di Rumah</h3>
+            <p>Latihan simpel yang bisa kamu lakukan di rumah tanpa alat...</p>
+          </a>
         </div>
 
         <div class="blog-card">
-          <img src="image/kece.jpg" alt="Artikel 3" />
-          <h3><a href="artikel-3.html">Rahasia Konsistensi Olahraga</a></h3>
-          <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
+          <a href="artikel-3.html">
+            <img src="image/kece.jpg" alt="Artikel 3" />
+            <h3>Rahasia Konsistensi Olahraga</h3>
+            <p>Kunci utama agar kamu tetap semangat dan konsisten olahraga...</p>
+          </a>
         </div>
       </div>
     </section>
